* Applied -ms-interpolation-mode: bicubic; to images in IE7 to increase quality of images * Fixed the display of the sign up area of the pitch banner in IE7 * Fixed problem with extra space above and below inline comments in IE8 and IE6 * Fixed how the login overlay title and registration overlay title displayed in IE8 * The "* Required" in the register, and post oauth and post connect overlays now appears with the * to the left and properly aligned to the text fields above

--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -276,6 +276,11 @@
 	font-size: 9pt;
 }
 
+.video .inline .body {
+	min-height: 0;
+	height: auto !important;
+}
+
 .video .inline .image {
 	text-align: right;
 	vertical-align: middle;
